# golazo

./: .gitignore  LICENSE  README.md  README.zh-CN.md  golazo-开发需求.md  install.sh  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
docs/: README.md
overlay/: README.md
overlay/GoalKick.spoon/: init.lua
overlay/GoalKick.spoon/anim/: palette.lua  sprites.lua  timeline.lua
overlay/Golazo.spoon/: init.lua
overlay/Golazo.spoon/anim/: palette.lua  sprites.lua  timeline.lua
overlay/tests/: dryrun.lua
plugin/.claude-plugin/: plugin.json
plugin/commands/: follow.md  mute.md  setup.md  status.md  test.md  unfollow.md
plugin/hooks/: hooks.json
plugin/scripts/: ensure-poller.sh  statusline.sh  trigger-test.sh
poller/: pyproject.toml
poller/goal_poller/: __init__.py  __main__.py  config.py  dispatcher.py  paths.py  teams.py
poller/goal_poller/providers/: __init__.py  base.py  football_data.py
poller/golazo/: __init__.py  __main__.py  config.py  detector.py  paths.py  runner.py
poller/golazo/providers/: mock.py
poller/tests/: conftest.py  test_cli.py  test_detector.py  test_dispatcher.py  test_runner.py  test_testrun.py
shared/: state-schema.md
