[project]
name = "goal-poller"
version = "0.1.0"
description = "goal-kick score-watching daemon: polls scores, detects goals, dispatches effect events"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["goal_poller*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
